--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:10.0.1'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.android.gms:play-services-maps:10.0.1'
+
+
 
     testCompile 'junit:junit:4.12'
 }
