--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,19 @@ dependencies {
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.android.gms:play-services-maps:10.0.1'
 
+    compile 'pub.devrel:easypermissions:0.2.1'
+    compile('com.google.api-client:google-api-client-android:1.22.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    compile('com.google.apis:google-api-services-calendar:v3-rev225-1.22.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
 
 
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
 
+configurations.all {
+    resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+}
