completed firebase functionalities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:value="AIzaSyAYmj_boBnrtaLJeztYqPJS96s-1eant2M" />
 
         <activity
-            android:name=".FirebaseTest"
+            android:name=".EventDetails"
             android:label="@string/title_activity_maps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +40,6 @@
         <activity android:name=".MapsActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name="UserAreaActivity" />
-        <activity android:name=".EventDetails" />
         <activity android:name=".LoginActivity"></activity>
     </application>
 
