Add events to calendar feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             android:value="AIzaSyAYmj_boBnrtaLJeztYqPJS96s-1eant2M" />
 
         <activity
+            android:exported="true"
             android:name=".LoginActivity"
 
             android:label="@string/title_activity_maps">
